<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/icon_regis"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/join"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/join"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_welcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="290dp"
        android:text="@string/ST"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/join" />

    <TextView
        android:id="@+id/tv_vhodd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/vhod"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_welcome" />

    <TextView
        android:id="@+id/tv_or_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:text="@string/register"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_vhodd" />

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="22dp"
        android:background="@drawable/bg_edit_text"
        android:backgroundTint="@color/white"
        android:hint="Введите вашу почту"
        android:inputType="textEmailAddress"
        android:paddingStart="14dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_or_register" />

    <EditText
        android:id="@+id/ed_password"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="22dp"
        android:background="@drawable/bg_edit_text"
        android:backgroundTint="@color/white"
        android:hint="Введите пароль"
        android:inputType="textPassword"
        android:paddingStart="14dp"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/et_email" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_voiti"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_marginStart="22dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="22dp"
        android:backgroundTint="@color/grey"
        android:text="@string/VOITI"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:cornerRadius="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ed_password" />


    <TextView
        android:id="@+id/tv_forget_pasword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="78dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:text="@string/forget_password"
        android:textColor="@color/white"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toStartOf="@id/tv_click"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_voiti" />

    <TextView
        android:id="@+id/tv_click"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="110dp"
        android:text="@string/Click_on_here"
        android:textColor="@color/orange"
        android:textSize="14sp"
        android:textStyle="normal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_forget_pasword"
        app:layout_constraintTop_toBottomOf="@id/btn_voiti" />

</androidx.constraintlayout.widget.ConstraintLayout>